[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gos-reddit-clone"
version = "0.1.0"
description = "A Reddit clone application built with FastAPI."
authors = [{name = "Gemini", email = "gemini@google.com"}]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pydantic",
    "pydantic-settings",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "python-multipart",
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
]

[project.scripts]
start-server = "uvicorn server.main:app --reload"
